# np-ephys

./: .gitignore  IO_tools.py  LICENSE  README.md  experiment_setup.ipynb  extract_spiketimes.ipynb  extract_sync_times.py  pyproject.toml  requirements.txt  spikesort_recordings.ipynb
config/: default_config.toml  run_config.toml
src/: compression.py  set_up_folders.py
tools/: compression.py  postprocess.py  settings.py  spikesorting.py  spiketimes.py
